Added release notes page

--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,70 @@
 {
   "name": "Chrome Extensiton Skelton",
   "author": "Nir Geier",
-  "version": "0.001",
+  "version": "0.0.2",
   "description": "Skelton for building chrome extension",
   "background": {
     "scripts": ["js/background.js"],
     "persistent": true
   },
+  "browser_action": {
+    "default_popup": "pages/popup.html",
+    "default_icon": "icons/icon128.png",
+    "default_title": "Full stack 2017"
+  },
+
   "externally_connectable": {
     "matches": ["<all_urls>"]
   },
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": [
-    "tabs",
     "activeTab",
-    "storage",
-    "downloads",
+    "alarms",
     "background",
+    "bookmarks",
+    "browsingData",
+    "clipboardRead",
+    "clipboardWrite",
+    "contentSettings",
+    "contextMenus",
+    "cookies",
+    "debugger",
+    "declarativeContent",
+    "desktopCapture",
+    "downloads",
+    "fontSettings",
+    "gcm",
+    "geolocation",
+    "history",
+    "idle",
+    "management",
+    "nativeMessaging",
+    "notifications",
+    "pageCapture",
+    "power",
+    "printerProvider",
+    "privacy",
+    "proxy",
+    "sessions",
+    "storage",
+    "system.cpu",
+    "system.display",
+    "system.memory",
+    "system.storage",
+    "tabCapture",
+    "tabs",
+    "topSites",
+    "tts",
+    "ttsEngine",
+    "unlimitedStorage",
+    "webNavigation",
     "webRequest",
+    "webRequestBlocking",
     "<all_urls>"
   ],
   "content_scripts": [{
